# Periodogram

./: .gitignore  .travis.yml  README.md  algo_bls.py  algo_ls.py  algo_plav.py  cli_args.py  constants.py  data_table.py  fileutils.py  func_args.py  mp_alt.py  mp_periodogram.py  periodogram.py  preferences.py  requirements.txt  setup.cfg  setup.py  statfunc.py  utilfunc.py
.github/workflows/: python-package.yml  python-publish.yml
_periodogram/: __init__.py  algo_bls.py  algo_ls.py  algo_plav.py  cli_args.py  constants.py  data_table.py  driver.py  fileutils.py  func_args.py  helptext.py  statfunc.py  utilfunc.py
mp/: mp_alt.py  mp_periodogram.py
testData/: lc1_python.txt
testData/outputA/: lc1_python.txt.out  lc1_python.txt.out.top
testData/outputB/: lc1_python.txt.out  lc1_python.txt.out.top
testData/outputC/: lc1_python.txt.out  lc1_python.txt.out.top
tests/: graphdata.py
tests/goodresults/AblsIexp/: lc1_python.txt.out  lc1_python.txt.out.top
tests/goodresults/AblsIfixedf/: lc1_python.txt.out  lc1_python.txt.out.top
tests/goodresults/AblsIfixedp/: lc1_python.txt.out  lc1_python.txt.out.top
tests/goodresults/AblsIplav/: lc1_python.txt.out  lc1_python.txt.out.top
tests/goodresults/AlsIexp/: lc1_python.txt.out  lc1_python.txt.out.top
tests/goodresults/AlsIplav/: lc1_python.txt.out  (+1 more)
tests/scripts/: test_AblsIexp.py  test_AblsIfixedf.py  test_AblsIfixedp.py  test_AblsIplav.py  test_AlsIexp.py  test_AlsIfixedf.py  test_AlsIfixedp.py  test_AlsIplav.py  test_AplavIexp.py  test_AplavIfixedf.py  test_AplavIfixedp.py  test_AplavIplav.py  testshared.py
(+13 files in other folders)
