[metadata]
name = periodogram
version = 0.1.1
author = John Berberian, Jr.
author_email = jeb.study@gmail.com
description = Compute periodograms of formatted data.
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
install_requires = install_requires
license = GPLv3
url = https://github.com/LindirQuenya/Periodogram
py_modules = periodogram, _periodogram
classifiers =
    Programming Language :: Python :: 3.5
    Operating System :: Unix
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
packages = find:
python_requires = >=3.5
